--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
 <p>📞 0531243269</p>
 <p>📧 speedlinecommunication02@gmail.com</p>
-<p>📍 Kumasi & Accra</p>
+<p>📍 KNUST-KUMASI</p>
 
 </section>
 
@@ -37,3 +37,4 @@
 
 </body>
 </html>
+
