--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact | Speedline Communication</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -37,4 +38,5 @@
 
 </body>
 </html>
+
 
