--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Speedline Communication | Home</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -45,3 +46,4 @@ dedicated to enhancing reputation and driving influence.
 
 </body>
 </html>
+
