--- a/index.html
+++ b/index.html
@@ -30,12 +30,19 @@
     <p>Managing Reputation. Driving Influence</p>
 </header>
 
-<section>
-<h2>Welcome</h2>
+<section class="welcome">
+
+<h2>Welcome to Speedline Communication</h2>
+
 <p>
-We are a premium public relations and strategic communication firm
-dedicated to enhancing reputation and driving influence.
+At Speedline Communication, we specialize in shaping powerful public
+perception, building organizational trust, and driving strategic
+influence through professional communication solutions.
 </p>
+
+<a href="services.html" class="cta-btn">
+Explore Our Services
+</a>    
 </section>
 
 <footer>
@@ -46,4 +53,5 @@ dedicated to enhancing reputation and driving influence.
 
 </body>
 </html>
+
 
