--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- HERO -->
 <header class="hero">
     <h1>Speedline Communication</h1>
-    <p>Managing Reputation. Driving Influence</p>
+    <p>Managing Reputation • Driving Influence • Building Trust</p>
 </header>
 
 <section class="welcome">
@@ -53,5 +53,6 @@ Explore Our Services
 
 </body>
 </html>
+
 
 
