--- a/index.html
+++ b/index.html
@@ -26,8 +26,20 @@
 
 <!-- HERO -->
 <header class="hero">
-    <h1>Speedline Communication</h1>
-    <p>Managing Reputation • Driving Influence • Building Trust</p>
+
+    <!-- VIDEO BACKGROUND -->
+    <video autoplay muted loop playsinline class="hero-video">
+        <source src="hero-video.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+
+    <!-- HERO CONTENT -->
+    <div class="hero-content">
+        <h1>Speedline Communication</h1>
+        <p>Managing Reputation • Driving Influence • Building Trust</p>
+        <a href="services.html" class="cta-btn">Explore Our Services</a>
+    </div>
+
 </header>
 
 <section class="welcome">
@@ -53,6 +65,7 @@ Explore Our Services
 
 </body>
 </html>
+
 
 
 
