--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const sections = document.querySelectorAll("section");
+
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if(entry.isIntersecting){
+                entry.target.classList.add("show");
+            }
+        });
+    }, { threshold: 0.2 });
+
+    sections.forEach(section => {
+        observer.observe(section);
+    });
+});
+</script>
+
 <body>
 
 <!-- NAVBAR -->
@@ -65,6 +83,7 @@ Explore Our Services
 
 </body>
 </html>
+
 
 
 
