--- a/services.html
+++ b/services.html
@@ -36,6 +36,9 @@
 </ul>
 
 </section>
+    <video autoplay muted loop playsinline class="section-video">
+    <source src="about-video.mp4" type="video/mp4">
+</video>
 
 <footer>
 <p class="copyright">© 2026 Speedline Communication</p>
@@ -43,4 +46,5 @@
 
 </body>
 </html>
+
 
