--- a/contact.html
+++ b/contact.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact | Speedline Communication</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <nav class="navbar">
     <div class="logo-nav">
-        <img src="logo.jpeg" class="logo">
+        <img src="logo.jpeg" class="logo" alt="Speedline Logo">
         <span>Speedline Communication</span>
     </div>
-
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -23,20 +21,45 @@
     </ul>
 </nav>
 
-<section>
-<h2>Contact Us</h2>
+<header class="hero">
+    <video autoplay muted loop playsinline class="hero-video">
+        <source src="hero-video.mp4" type="video/mp4">
+    </video>
+    <div class="hero-content">
+        <h1>Contact Us</h1>
+        <p>Reach out to us for PR and strategic communication solutions</p>
+    </div>
+</header>
 
+<section>
+<h2>Get In Touch</h2>
 <p>📞 0531243269</p>
 <p>📧 speedlinecommunication02@gmail.com</p>
 <p>📍 KNUST-KUMASI</p>
-
 </section>
 
 <footer>
 <p class="copyright">© 2026 Speedline Communication</p>
 </footer>
 
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+    const sections = document.querySelectorAll("section");
+    const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+            if(entry.isIntersecting){
+                entry.target.classList.add("show");
+            }
+        });
+    }, { threshold: 0.2 });
+    sections.forEach(section => observer.observe(section));
+});
+</script>
+
 </body>
 </html>
+
+
+
 
 
